kubernetes/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
spec:
  rules:
    - host: minilib.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-service
                port:
                  number: 8080
